--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-golang-github-linuxdeepin-go-x11-client (0.0~git20170814.0.a1811f4) unstable; urgency=medium
+golang-github-linuxdeepin-go-x11-client (0.0.2-1) unstable; urgency=medium
 
-  * Initial release 
+  * update 
 
- -- root <root@virt.test.com>  Sun, 13 Aug 2017 21:55:25 -0400
+ -- Deepin Packages Builder <packages@deepin.com>  Fri, 15 Dec 2017 17:12:00 +0800
