--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-github-linuxdeepin-go-x11-client (1.0.0.0) unstable; urgency=medium
+
+  * release 1.0.0.0
+
+ --  <fanpengcheng@uniontech.com>  Tue, 14 June 2022 17:11:13 +0800
+
 golang-github-linuxdeepin-go-x11-client (0.0.2-1) unstable; urgency=medium
 
   * update 
