--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-github-linuxdeepin-go-x11-client (0.0.3) unstable; urgency=medium
+
+  * adapt license and copyright
+
+ -- dengbo <dengbo@uniontech.com>  Wed, 14 Sep 2022 16:27:01 +0000
+
 golang-github-linuxdeepin-go-x11-client (0.0.2-1) unstable; urgency=medium
 
   * update 
