chore: bump version to 1.0.1
modify changelog for V23 beta

Log:

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-github-linuxdeepin-go-x11-client (1.0.1) unstable; urgency=medium
+
+  * modify changelog for V23 beta
+
+ -- linxin <linxin@uniontech.com>  Wed, 29 Mar 2023 11:46:38 +0800
+
 golang-github-linuxdeepin-go-x11-client (1.0.0.0) unstable; urgency=medium
 
   * release 1.0.0.0
